[Jakarta EE] Upgrade to Tomcat 11. All tests pass